--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,9 @@
   "env": {
       "node": true,
       "browser": true,
-      "es6": true
+      "es6": true,
+      "jest": true,
+      "jquery": true
   },
   "rules": {
       "linebreak-style": 0,
